--- a/border_radius_shadow/style.css
+++ b/border_radius_shadow/style.css
@@ -10,8 +10,12 @@
 }
 
 .result {
+	display: flex;
+	justify-content: center;
+	align-items: center;
 	width: 300px;
 	height: 100px;
 	background-color: dodgerblue;
 	margin: 35px 0 0 20px;
 }
+
